--- a/src/4.fusion.ipynb
+++ b/src/4.fusion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "5aa22f0b",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "40e1b409",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Saída após fusão espacial (MLP + APMR_edge + MFSR_edge + IGD_GLOBAL):\n",
+      "Saída após fusão espacial (MLP + APMR_edge + MFSR_edge + IGD_global):\n",
       "Aresta [-55, 2, 17, 0.3] | MLP=0.99, APMR_edge=0.65, MFSR_edge=0.85, IGD=0.62 -> Score=0.85 => Classe 1 (Bom)\n",
       "Aresta [-85, 3.8, 30, 0.1] | MLP=0.53, APMR_edge=0.68, MFSR_edge=0.85, IGD=0.62 -> Score=0.62 => Classe 1 (Bom)\n",
       "Aresta [-35, 1.2, 5, 0.05] | MLP=1.00, APMR_edge=0.70, MFSR_edge=0.85, IGD=0.62 -> Score=0.86 => Classe 1 (Bom)\n",
@@ -175,31 +175,19 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# ====== Auxiliares ======\n",
-    "def clip01(x): \n",
-    "    return max(0.0, min(1.0, float(x)))\n",
-    "\n",
-    "# ====== Probabilidade do MLP (classe \"Bom\") ======\n",
+    "# ====== Probabilidade do MLP ======\n",
     "prob_ml = probs[:, 1].numpy()\n",
     "\n",
     "# ====== Métricas Radnet ======\n",
-    "# Por aresta (1 valor por amostra)\n",
     "n = len(test_data)\n",
-    "\n",
-    "# Exemplos determinísticos e suaves só para mock\n",
-    "APMR_edge = np.clip(0.65 + 0.20*np.sin(np.linspace(0, 3*np.pi, n)), 0, 1)   # match de prefixo por par\n",
-    "MFSR_edge = np.clip(0.70 + 0.15*np.cos(np.linspace(0, 2*np.pi, n)), 0, 1)   # sucesso de encaminhamento por par\n",
-    "\n",
-    "# Global (um único valor para todas as amostras)\n",
-    "IGD_GLOBAL = 0.62  # densidade de interesse da rede (ajuste conforme seu cenário)\n",
-    "IGD_vec = np.full(n, clip01(IGD_GLOBAL))\n",
+    "APMR_edge = np.clip(0.65 + 0.20*np.sin(np.linspace(0, 3*np.pi, n)), 0, 1)\n",
+    "MFSR_edge = np.clip(0.70 + 0.15*np.cos(np.linspace(0, 2*np.pi, n)), 0, 1)\n",
+    "IGD_global = 0.62\n",
+    "IGD_vec = np.full(n, max(0.0, min(1.0, float(IGD_global))))\n",
     "\n",
     "# ====== Fusão espacial (ponderada) ======\n",
     "w_ml, w_ap, w_mf, w_ig = 0.50, 0.20, 0.15, 0.15\n",
-    "final_score = (w_ml*prob_ml +\n",
-    "               w_ap*APMR_edge +\n",
-    "               w_mf*MFSR_edge +\n",
-    "               w_ig*IGD_vec)\n",
+    "final_score = (w_ml*prob_ml + w_ap*APMR_edge + w_mf*MFSR_edge + w_ig*IGD_vec)\n",
     "\n",
     "# ====== Decisão final ======\n",
     "tau = 0.5\n",
@@ -207,7 +195,7 @@
     "CLASS_NAMES = {0: \"Ruim\", 1: \"Bom\"}\n",
     "\n",
     "# ====== Resultados ======\n",
-    "print(\"\\nSaída após fusão espacial (MLP + APMR_edge + MFSR_edge + IGD_GLOBAL):\")\n",
+    "print(\"\\nSaída após fusão espacial (MLP + APMR_edge + MFSR_edge + IGD_global):\")\n",
     "for i, row in enumerate(test_data):\n",
     "    print(\n",
     "        f\"Aresta {row} | \"\n",
@@ -215,7 +203,8 @@
     "        f\"-> Score={final_score[i]:.2f} => Classe {final_class[i]} ({CLASS_NAMES[final_class[i]]})\"\n",
     "    )\n",
     "\n",
-    "fusion_scores = final_score.tolist()\n"
+    "# ====== Variaveis ======\n",
+    "fusion_scores = final_score.tolist()"
    ]
   }
  ],
