--- a/src/1.dataset.ipynb
+++ b/src/1.dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "85f2754e",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,8 @@
     "print(\"Dataset salvo em ../datasets/edges.csv\")\n",
     "print(df.head())\n",
     "print(f\"\\nDistribuição dos labels:\")\n",
-    "print(df['label'].value_counts())"
+    "print(df['label'].value_counts())\n",
+    "print(\"\\n\")"
    ]
   }
  ],
