--- a/src/2.train.ipynb
+++ b/src/2.train.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2844ddb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run 1.dataset.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "46ace084",
    "metadata": {},
