--- a/src/3.inference.ipynb
+++ b/src/3.inference.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7a62f125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run 2.train.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "78efbb23",
    "metadata": {},
