--- a/src/2.train.ipynb
+++ b/src/2.train.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "46ace084",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,8 @@
     "joblib.dump(scaler, \"../models/scaler.pkl\")\n",
     "\n",
     "print(\"Modelo salvo em ../models/mlp.pth\")\n",
-    "print(\"Modelo salvo em ../models/scaler.pkl\")"
+    "print(\"Modelo salvo em ../models/scaler.pkl\")\n",
+    "print(\"\\n\")"
    ]
   }
  ],
