Inseridno Legendas dos Gráficos

--- a/src/6.results.ipynb
+++ b/src/6.results.ipynb
@@ -235,6 +235,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e55224c",
+   "metadata": {},
+   "source": [
+    "### Comparação: GNN vs Fusão vs Kalman\n",
+    "\n",
+    "O gráfico mostra a comparação entre GNN, Fusão e Kalman em várias amostras.\n",
+    "A GNN atinge valores altos de confiança, mas é bastante instável, caindo a zero em vários pontos.\n",
+    "A Fusão apresenta resultados mais estáveis, geralmente entre 0.6 e 0.9, embora com quedas ocasionais.\n",
+    "Já o Kalman é o mais regular, mantendo uma linha mais suave, mas com valores médios inferiores aos da GNN.\n",
+    "Assim, a GNN tem maior potencial, porém a Fusão e o Kalman oferecem mais consistência."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "id": "cbc5fcd2",
@@ -301,6 +315,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c64be0e",
+   "metadata": {},
+   "source": [
+    "### Comparação: GNN vs Fusão vs Kalman (primeiras 10 amostras\n",
+    "\n",
+    "O gráfico compara a confiança dos métodos GNN, Fusão e Kalman em 10 amostras.\n",
+    "\n",
+    "- A GNN apresenta os melhores resultados na maioria dos casos, chegando a 1.0 em várias amostras, mostrando-se mais consistente e confiável.\n",
+    "- A Fusão mantém desempenho intermediário, mas cai bastante em algumas amostras (3 e 4).\n",
+    "- O Kalman é mais irregular: em certos pontos supera a Fusão, mas geralmente fica abaixo da GNN.\n",
+    "\n",
+    "No geral, a GNN é o método mais robusto, enquanto Fusão e Kalman variam mais nos resultados."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "df951d46",
@@ -364,6 +394,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18ef73d9",
+   "metadata": {},
+   "source": [
+    "### Distribuição dos Scores — Boxplot\n",
+    "\n",
+    "O boxplot mostra a distribuição dos scores de confiança para GNN, Fusão e Kalman.\n",
+    "A GNN apresenta maior variação: vai de 0 até quase 1.0, mas com mediana alta (~0.8), indicando grande potencial, embora instável.\n",
+    "A Fusão é mais consistente, com mediana próxima de 0.75 e menor dispersão, mas sem atingir valores tão altos quanto a GNN.\n",
+    "O Kalman é o mais estável, com menor variação e resultados concentrados em torno de 0.6–0.7, porém não alcança picos elevados.\n",
+    "\n",
+    "Assim, conclui-se que:\n",
+    "\n",
+    "- GNN = melhor desempenho máximo, mas irregular.\n",
+    "- Fusão = equilíbrio entre estabilidade e valores altos.\n",
+    "- Kalman = maior consistência, porém limitado em confiança."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "128b3355",
@@ -417,6 +466,22 @@
     "ax.grid(True, axis=\"y\", alpha=0.3)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8001f354",
+   "metadata": {},
+   "source": [
+    "### Distribuição dos Scores — Violin Plot\n",
+    "\n",
+    "O violin plot mostra a distribuição dos scores de confiança:\n",
+    "\n",
+    "- A GNN tem grande variação, indo de 0 até 1.0, com duas concentrações claras (valores baixos e muito altos). Isso confirma sua alta performance máxima, mas instabilidade.\n",
+    "- A Fusão apresenta distribuição mais concentrada entre 0.6 e 0.85, com mediana em torno de 0.75, mostrando estabilidade e bons valores.\n",
+    "- O Kalman é o mais regular, com concentração próxima de 0.6–0.7, mas limitado em alcançar valores muito altos.\n",
+    "\n",
+    "Em resumo: GNN = maior potencial, porém instável; Fusão = equilíbrio; Kalman = consistência moderada."
    ]
   }
  ],
