--- a/src/2.train.ipynb
+++ b/src/2.train.ipynb
@@ -2,17 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2844ddb3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset salvo em ../datasets/edges.csv\n",
+      "     src   dest       rssi       etx      delay  busy_fraction  label\n",
+      "0  51679   4099 -52.240193  3.213027  29.192350       0.273040      1\n",
+      "1   5598  97030 -65.528683  9.078898  54.702416       0.385090      0\n",
+      "2  98247  27356 -57.386371  3.047537  31.362661       0.311230      1\n",
+      "3  59679  62407 -60.366136  1.981208  32.438587       0.193277      1\n",
+      "4  56906  71176 -73.647850  5.488077  41.922475       0.776727      0\n",
+      "\n",
+      "Distribuição dos labels:\n",
+      "label\n",
+      "1    100000\n",
+      "0    100000\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%run 1.dataset.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "46ace084",
    "metadata": {},
    "outputs": [
@@ -20,22 +42,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Loss 0.7179, Train Acc 0.4708, Test Acc 0.5920\n",
-      "Epoch 10, Loss 0.3778, Train Acc 0.9672, Test Acc 0.9689\n",
-      "Epoch 20, Loss 0.1552, Train Acc 0.9740, Test Acc 0.9751\n",
-      "Epoch 30, Loss 0.0742, Train Acc 0.9781, Test Acc 0.9790\n",
-      "Epoch 40, Loss 0.0518, Train Acc 0.9815, Test Acc 0.9827\n",
+      "Epoch 0, Loss 0.6177, Train Acc 0.5618, Test Acc 0.9068\n",
+      "Epoch 10, Loss 0.2960, Train Acc 0.9688, Test Acc 0.9691\n",
+      "Epoch 20, Loss 0.1142, Train Acc 0.9766, Test Acc 0.9768\n",
+      "Epoch 30, Loss 0.0608, Train Acc 0.9809, Test Acc 0.9815\n",
+      "Epoch 40, Loss 0.0452, Train Acc 0.9840, Test Acc 0.9843\n",
       "\n",
-      "Acurácia final no conjunto de teste: 0.9851\n",
+      "Acurácia final no conjunto de teste: 0.9858\n",
       "\n",
       "Matriz de Confusão:\n",
-      "[[29307   693]\n",
-      " [  200 29800]]\n",
+      "[[29315   685]\n",
+      " [  166 29834]]\n",
       "\n",
       "Relatório de Classificação:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        Ruim       0.99      0.98      0.98     30000\n",
+      "        Ruim       0.99      0.98      0.99     30000\n",
       "         Bom       0.98      0.99      0.99     30000\n",
       "\n",
       "    accuracy                           0.99     60000\n",
@@ -43,7 +65,9 @@
       "weighted avg       0.99      0.99      0.99     60000\n",
       "\n",
       "Modelo salvo em ../models/mlp.pth\n",
-      "Modelo salvo em ../models/scaler.pkl\n"
+      "Modelo salvo em ../models/scaler.pkl\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -149,7 +173,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.12.4)",
+   "display_name": "venv (3.9.6)",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
