--- a/src/1.dataset.ipynb
+++ b/src/1.dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "85f2754e",
    "metadata": {},
    "outputs": [
@@ -12,17 +12,19 @@
      "text": [
       "Dataset salvo em ../datasets/edges.csv\n",
       "     src   dest       rssi       etx      delay  busy_fraction  label\n",
-      "0  42110  90335 -76.617805  7.744740  25.902778       0.405995      0\n",
-      "1  68206  53424 -58.412163  9.227081  76.285200       0.648600      0\n",
-      "2   4686  57543 -32.582370  2.911203  16.056476       0.324278      1\n",
-      "3  58692  31584 -39.643939  1.955511   9.778539       0.103023      1\n",
-      "4  48424  87371 -63.285225  3.435297  14.687009       0.061677      1\n",
+      "0  35273  38059 -77.022996  4.204539  91.065363       0.549697      0\n",
+      "1  14440  67232 -50.391060  3.893108  13.263134       0.154174      1\n",
+      "2   6383  35306 -38.231781  3.843186  18.191462       0.095562      1\n",
+      "3  42436  89557 -60.143296  8.585158  27.757753       0.450841      0\n",
+      "4  41360  43895 -80.796139  4.521404  33.785629       0.989980      0\n",
       "\n",
       "Distribuição dos labels:\n",
       "label\n",
       "0    100000\n",
       "1    100000\n",
-      "Name: count, dtype: int64\n"
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -107,7 +109,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.12.4)",
+   "display_name": "venv (3.9.6)",
    "language": "python",
    "name": "python3"
   },
@@ -121,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
