--- a/src/3.inference.ipynb
+++ b/src/3.inference.ipynb
@@ -2,17 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7a62f125",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset salvo em ../datasets/edges.csv\n",
+      "     src   dest       rssi       etx      delay  busy_fraction  label\n",
+      "0  89930  95747 -70.935452  9.596093  45.918006       0.726717      0\n",
+      "1  92007  42215 -41.586312  3.931363  24.350411       0.218048      1\n",
+      "2  15051  58414 -34.649907  1.146929   4.431201       0.338474      1\n",
+      "3  47314  38744 -63.633666  1.380951   4.697191       0.188736      1\n",
+      "4  22274  29887 -51.743405  7.423409  25.955784       0.534229      0\n",
+      "\n",
+      "Distribuição dos labels:\n",
+      "label\n",
+      "0    100000\n",
+      "1    100000\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Epoch 0, Loss 0.6253, Train Acc 0.8003, Test Acc 0.8877\n",
+      "Epoch 10, Loss 0.2726, Train Acc 0.9794, Test Acc 0.9810\n",
+      "Epoch 20, Loss 0.1069, Train Acc 0.9837, Test Acc 0.9847\n",
+      "Epoch 30, Loss 0.0584, Train Acc 0.9851, Test Acc 0.9861\n",
+      "Epoch 40, Loss 0.0439, Train Acc 0.9864, Test Acc 0.9873\n",
+      "\n",
+      "Acurácia final no conjunto de teste: 0.9882\n",
+      "\n",
+      "Matriz de Confusão:\n",
+      "[[29514   486]\n",
+      " [  224 29776]]\n",
+      "\n",
+      "Relatório de Classificação:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        Ruim       0.99      0.98      0.99     30000\n",
+      "         Bom       0.98      0.99      0.99     30000\n",
+      "\n",
+      "    accuracy                           0.99     60000\n",
+      "   macro avg       0.99      0.99      0.99     60000\n",
+      "weighted avg       0.99      0.99      0.99     60000\n",
+      "\n",
+      "Modelo salvo em ../models/mlp.pth\n",
+      "Modelo salvo em ../models/scaler.pkl\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%run 2.train.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "78efbb23",
    "metadata": {},
    "outputs": [
@@ -21,23 +69,23 @@
      "output_type": "stream",
      "text": [
       "Aresta [-55, 2, 17, 0.3] -> Classe 1 (Bom) (confiança 0.99)\n",
-      "Aresta [-85, 3.8, 30, 0.1] -> Classe 1 (Bom) (confiança 0.53)\n",
+      "Aresta [-85, 3.8, 30, 0.1] -> Classe 1 (Bom) (confiança 0.56)\n",
       "Aresta [-35, 1.2, 5, 0.05] -> Classe 1 (Bom) (confiança 1.00)\n",
       "Aresta [-88, 9.5, 95, 0.9] -> Classe 0 (Ruim) (confiança 1.00)\n",
       "Aresta [-40, 8.2, 85, 0.8] -> Classe 0 (Ruim) (confiança 1.00)\n",
-      "Aresta [-87, 1.5, 8, 0.15] -> Classe 1 (Bom) (confiança 0.98)\n",
-      "Aresta [-62, 2.8, 32, 0.28] -> Classe 1 (Bom) (confiança 0.96)\n",
-      "Aresta [-58, 3.2, 28, 0.32] -> Classe 1 (Bom) (confiança 0.96)\n",
+      "Aresta [-87, 1.5, 8, 0.15] -> Classe 1 (Bom) (confiança 0.95)\n",
+      "Aresta [-62, 2.8, 32, 0.28] -> Classe 1 (Bom) (confiança 0.94)\n",
+      "Aresta [-58, 3.2, 28, 0.32] -> Classe 1 (Bom) (confiança 0.94)\n",
       "Aresta [-52, 2.1, 20, 0.25] -> Classe 1 (Bom) (confiança 0.99)\n",
       "Aresta [-48, 2.5, 25, 0.22] -> Classe 1 (Bom) (confiança 0.99)\n",
-      "Aresta [-50, 1.8, 22, 0.28] -> Classe 1 (Bom) (confiança 0.99)\n",
+      "Aresta [-50, 1.8, 22, 0.28] -> Classe 1 (Bom) (confiança 1.00)\n",
       "Aresta [-75, 5.2, 65, 0.6] -> Classe 0 (Ruim) (confiança 1.00)\n",
       "Aresta [-78, 4.8, 70, 0.65] -> Classe 0 (Ruim) (confiança 1.00)\n",
       "Aresta [-72, 5.5, 60, 0.58] -> Classe 0 (Ruim) (confiança 1.00)\n",
-      "Aresta [-45, 4.5, 15, 0.7] -> Classe 1 (Bom) (confiança 0.56)\n",
-      "Aresta [-70, 1.9, 45, 0.2] -> Classe 1 (Bom) (confiança 0.94)\n",
-      "Aresta [-60, 2.9, 30, 0.3] -> Classe 1 (Bom) (confiança 0.97)\n",
-      "Aresta [-65, 2.2, 18, 0.25] -> Classe 1 (Bom) (confiança 0.99)\n",
+      "Aresta [-45, 4.5, 15, 0.7] -> Classe 0 (Ruim) (confiança 0.71)\n",
+      "Aresta [-70, 1.9, 45, 0.2] -> Classe 1 (Bom) (confiança 0.91)\n",
+      "Aresta [-60, 2.9, 30, 0.3] -> Classe 1 (Bom) (confiança 0.94)\n",
+      "Aresta [-65, 2.2, 18, 0.25] -> Classe 1 (Bom) (confiança 0.98)\n",
       "Aresta [-50, 3.5, 35, 0.35] -> Classe 1 (Bom) (confiança 0.94)\n",
       "Aresta [-32, 1.1, 3, 0.02] -> Classe 1 (Bom) (confiança 1.00)\n",
       "Aresta [-90, 9.8, 98, 0.95] -> Classe 0 (Ruim) (confiança 1.00)\n",
@@ -45,21 +93,21 @@
       "Aresta [-86, 8.5, 88, 0.85] -> Classe 0 (Ruim) (confiança 1.00)\n",
       "Aresta [-42, 1.6, 12, 0.12] -> Classe 1 (Bom) (confiança 1.00)\n",
       "Aresta [-33, 7.2, 75, 0.8] -> Classe 0 (Ruim) (confiança 1.00)\n",
-      "Aresta [-82, 1.2, 8, 0.1] -> Classe 1 (Bom) (confiança 1.00)\n",
+      "Aresta [-82, 1.2, 8, 0.1] -> Classe 1 (Bom) (confiança 0.99)\n",
       "Aresta [-75, 8.1, 5, 0.85] -> Classe 0 (Ruim) (confiança 1.00)\n",
-      "Aresta [-68, 6.5, 85, 0.05] -> Classe 0 (Ruim) (confiança 0.99)\n",
-      "Aresta [-89, 2.1, 18, 0.15] -> Classe 1 (Bom) (confiança 0.91)\n",
-      "Aresta [-45, 9.2, 22, 0.2] -> Classe 0 (Ruim) (confiança 0.94)\n",
-      "Aresta [-52, 2.3, 95, 0.25] -> Classe 0 (Ruim) (confiança 0.76)\n",
-      "Aresta [-48, 2.0, 20, 0.88] -> Classe 1 (Bom) (confiança 0.82)\n",
-      "Aresta [-59, 3.0, 29, 0.29] -> Classe 1 (Bom) (confiança 0.97)\n",
-      "Aresta [-61, 2.9, 31, 0.31] -> Classe 1 (Bom) (confiança 0.96)\n",
-      "Aresta [-60.5, 3.05, 30.5, 0.305] -> Classe 1 (Bom) (confiança 0.96)\n",
-      "Aresta [-59.5, 2.95, 29.5, 0.295] -> Classe 1 (Bom) (confiança 0.97)\n",
-      "Aresta [-67, 4.2, 45, 0.5] -> Classe 0 (Ruim) (confiança 0.90)\n",
-      "Aresta [-64, 3.8, 42, 0.48] -> Classe 0 (Ruim) (confiança 0.63)\n",
-      "Aresta [-69, 4.5, 48, 0.52] -> Classe 0 (Ruim) (confiança 0.97)\n",
-      "Aresta [-66, 4.0, 40, 0.45] -> Classe 0 (Ruim) (confiança 0.67)\n",
+      "Aresta [-68, 6.5, 85, 0.05] -> Classe 0 (Ruim) (confiança 0.96)\n",
+      "Aresta [-89, 2.1, 18, 0.15] -> Classe 1 (Bom) (confiança 0.80)\n",
+      "Aresta [-45, 9.2, 22, 0.2] -> Classe 0 (Ruim) (confiança 0.70)\n",
+      "Aresta [-52, 2.3, 95, 0.25] -> Classe 1 (Bom) (confiança 0.57)\n",
+      "Aresta [-48, 2.0, 20, 0.88] -> Classe 0 (Ruim) (confiança 0.82)\n",
+      "Aresta [-59, 3.0, 29, 0.29] -> Classe 1 (Bom) (confiança 0.95)\n",
+      "Aresta [-61, 2.9, 31, 0.31] -> Classe 1 (Bom) (confiança 0.93)\n",
+      "Aresta [-60.5, 3.05, 30.5, 0.305] -> Classe 1 (Bom) (confiança 0.93)\n",
+      "Aresta [-59.5, 2.95, 29.5, 0.295] -> Classe 1 (Bom) (confiança 0.94)\n",
+      "Aresta [-67, 4.2, 45, 0.5] -> Classe 0 (Ruim) (confiança 0.97)\n",
+      "Aresta [-64, 3.8, 42, 0.48] -> Classe 0 (Ruim) (confiança 0.87)\n",
+      "Aresta [-69, 4.5, 48, 0.52] -> Classe 0 (Ruim) (confiança 0.99)\n",
+      "Aresta [-66, 4.0, 40, 0.45] -> Classe 0 (Ruim) (confiança 0.87)\n",
       "Aresta [-54, 1.9, 16, 0.28] -> Classe 1 (Bom) (confiança 0.99)\n",
       "Aresta [-56, 2.2, 19, 0.26] -> Classe 1 (Bom) (confiança 0.99)\n",
       "Aresta [-51, 1.7, 21, 0.24] -> Classe 1 (Bom) (confiança 1.00)\n",
@@ -70,26 +118,26 @@
       "Aresta [-77, 6.2, 72, 0.68] -> Classe 0 (Ruim) (confiança 1.00)\n",
       "Aresta [-73, 5.5, 58, 0.56] -> Classe 0 (Ruim) (confiança 1.00)\n",
       "Aresta [-79, 5.9, 75, 0.71] -> Classe 0 (Ruim) (confiança 1.00)\n",
-      "Aresta [-55, 1.8, 35, 0.6] -> Classe 1 (Bom) (confiança 0.93)\n",
-      "Aresta [-45, 4.2, 25, 0.7] -> Classe 0 (Ruim) (confiança 0.57)\n",
-      "Aresta [-65, 2.5, 18, 0.55] -> Classe 1 (Bom) (confiança 0.93)\n",
-      "Aresta [-58, 3.8, 28, 0.8] -> Classe 0 (Ruim) (confiança 0.89)\n",
-      "Aresta [-41, 5.0, 50, 0.5] -> Classe 0 (Ruim) (confiança 0.84)\n",
-      "Aresta [-80, 2.0, 20, 0.2] -> Classe 1 (Bom) (confiança 0.97)\n",
+      "Aresta [-55, 1.8, 35, 0.6] -> Classe 1 (Bom) (confiança 0.65)\n",
+      "Aresta [-45, 4.2, 25, 0.7] -> Classe 0 (Ruim) (confiança 0.75)\n",
+      "Aresta [-65, 2.5, 18, 0.55] -> Classe 1 (Bom) (confiança 0.58)\n",
+      "Aresta [-58, 3.8, 28, 0.8] -> Classe 0 (Ruim) (confiança 0.99)\n",
+      "Aresta [-41, 5.0, 50, 0.5] -> Classe 0 (Ruim) (confiança 0.60)\n",
+      "Aresta [-80, 2.0, 20, 0.2] -> Classe 1 (Bom) (confiança 0.91)\n",
       "Aresta [-60, 6.0, 60, 0.6] -> Classe 0 (Ruim) (confiança 1.00)\n",
       "Aresta [-50, 2.5, 25, 0.25] -> Classe 1 (Bom) (confiança 0.99)\n",
-      "Aresta [-57, 2.8, 28, 0.28] -> Classe 1 (Bom) (confiança 0.98)\n",
-      "Aresta [-63, 3.2, 32, 0.32] -> Classe 1 (Bom) (confiança 0.93)\n",
-      "Aresta [-58, 2.9, 31, 0.29] -> Classe 1 (Bom) (confiança 0.97)\n",
-      "Aresta [-62, 3.1, 29, 0.31] -> Classe 1 (Bom) (confiança 0.96)\n",
+      "Aresta [-57, 2.8, 28, 0.28] -> Classe 1 (Bom) (confiança 0.97)\n",
+      "Aresta [-63, 3.2, 32, 0.32] -> Classe 1 (Bom) (confiança 0.87)\n",
+      "Aresta [-58, 2.9, 31, 0.29] -> Classe 1 (Bom) (confiança 0.95)\n",
+      "Aresta [-62, 3.1, 29, 0.31] -> Classe 1 (Bom) (confiança 0.91)\n",
       "Aresta [-30, 1.0, 1, 0.01] -> Classe 1 (Bom) (confiança 1.00)\n",
       "Aresta [-90, 10.0, 100, 1.0] -> Classe 0 (Ruim) (confiança 1.00)\n",
       "Aresta [-31, 1.5, 10, 0.05] -> Classe 1 (Bom) (confiança 1.00)\n",
       "Aresta [-89, 9.0, 90, 0.9] -> Classe 0 (Ruim) (confiança 1.00)\n",
-      "Aresta [-44, 7.5, 12, 0.15] -> Classe 1 (Bom) (confiança 0.83)\n",
-      "Aresta [-83, 1.8, 78, 0.75] -> Classe 0 (Ruim) (confiança 0.99)\n",
-      "Aresta [-38, 6.8, 8, 0.82] -> Classe 0 (Ruim) (confiança 0.98)\n",
-      "Aresta [-71, 1.4, 55, 0.18] -> Classe 1 (Bom) (confiança 0.92)\n"
+      "Aresta [-44, 7.5, 12, 0.15] -> Classe 1 (Bom) (confiança 0.88)\n",
+      "Aresta [-83, 1.8, 78, 0.75] -> Classe 0 (Ruim) (confiança 1.00)\n",
+      "Aresta [-38, 6.8, 8, 0.82] -> Classe 0 (Ruim) (confiança 0.96)\n",
+      "Aresta [-71, 1.4, 55, 0.18] -> Classe 1 (Bom) (confiança 0.89)\n"
      ]
     }
    ],
@@ -212,7 +260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.12.4)",
+   "display_name": "venv (3.9.6)",
    "language": "python",
    "name": "python3"
   },
@@ -226,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
