--- a/src/1.dataset.ipynb
+++ b/src/1.dataset.ipynb
@@ -1,42 +1,59 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "85f2754e",
+   "cell_type": "markdown",
+   "id": "2684c42f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset salvo em ../datasets/edges.csv\n",
-      "     src   dest       rssi       etx      delay  busy_fraction  label\n",
-      "0  35273  38059 -77.022996  4.204539  91.065363       0.549697      0\n",
-      "1  14440  67232 -50.391060  3.893108  13.263134       0.154174      1\n",
-      "2   6383  35306 -38.231781  3.843186  18.191462       0.095562      1\n",
-      "3  42436  89557 -60.143296  8.585158  27.757753       0.450841      0\n",
-      "4  41360  43895 -80.796139  4.521404  33.785629       0.989980      0\n",
-      "\n",
-      "Distribuição dos labels:\n",
-      "label\n",
-      "0    100000\n",
-      "1    100000\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "893c315d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# Definição de parâmetros\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "557d5357",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d5c7004",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "num_nodes = 100000  # quantidade de nós\n",
-    "num_edges = 200000  # quantidade de arestas\n",
-    "\n",
+    "num_edges = 200000  # quantidade de arestas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d99dd180",
+   "metadata": {},
+   "source": [
+    "### Generate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "85f2754e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "edges = []\n",
     "label_0_count = 0\n",
     "label_1_count = 0\n",
@@ -92,24 +109,43 @@
     "    else:\n",
     "        label_1_count += 1\n",
     "    \n",
-    "    edges.append([src, dest, rssi, etx, delay, busy, label])\n",
-    "\n",
-    "# ====== Salvar dataset ======\n",
+    "    edges.append([src, dest, rssi, etx, delay, busy, label])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52cbc24a",
+   "metadata": {},
+   "source": [
+    "### Save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab18ade9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset salvo em ../datasets/edges_dataset.csv\n"
+     ]
+    }
+   ],
+   "source": [
     "df = pd.DataFrame(edges, columns=[\"src\", \"dest\", \"rssi\", \"etx\", \"delay\", \"busy_fraction\", \"label\"])\n",
     "os.makedirs(\"../datasets\", exist_ok=True)\n",
-    "df.to_csv(\"../datasets/edges.csv\", index=False)\n",
+    "df.to_csv(\"../datasets/edges_dataset.csv\", index=False)\n",
     "\n",
-    "print(\"Dataset salvo em ../datasets/edges.csv\")\n",
-    "print(df.head())\n",
-    "print(f\"\\nDistribuição dos labels:\")\n",
-    "print(df['label'].value_counts())\n",
-    "print(\"\\n\")"
+    "print(\"Dataset salvo em ../datasets/edges_dataset.csv\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.9.6)",
+   "display_name": "venv (3.12.4)",
    "language": "python",
    "name": "python3"
   },
@@ -123,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
