--- a/src/2.train.ipynb
+++ b/src/2.train.ipynb
@@ -1,92 +1,59 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "2844ddb3",
+   "cell_type": "markdown",
+   "id": "c7881969",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset salvo em ../datasets/edges.csv\n",
-      "     src   dest       rssi       etx      delay  busy_fraction  label\n",
-      "0  51679   4099 -52.240193  3.213027  29.192350       0.273040      1\n",
-      "1   5598  97030 -65.528683  9.078898  54.702416       0.385090      0\n",
-      "2  98247  27356 -57.386371  3.047537  31.362661       0.311230      1\n",
-      "3  59679  62407 -60.366136  1.981208  32.438587       0.193277      1\n",
-      "4  56906  71176 -73.647850  5.488077  41.922475       0.776727      0\n",
-      "\n",
-      "Distribuição dos labels:\n",
-      "label\n",
-      "1    100000\n",
-      "0    100000\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "%run 1.dataset.ipynb"
+    "### Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "46ace084",
+   "execution_count": 13,
+   "id": "c9639f57",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0, Loss 0.6177, Train Acc 0.5618, Test Acc 0.9068\n",
-      "Epoch 10, Loss 0.2960, Train Acc 0.9688, Test Acc 0.9691\n",
-      "Epoch 20, Loss 0.1142, Train Acc 0.9766, Test Acc 0.9768\n",
-      "Epoch 30, Loss 0.0608, Train Acc 0.9809, Test Acc 0.9815\n",
-      "Epoch 40, Loss 0.0452, Train Acc 0.9840, Test Acc 0.9843\n",
-      "\n",
-      "Acurácia final no conjunto de teste: 0.9858\n",
-      "\n",
-      "Matriz de Confusão:\n",
-      "[[29315   685]\n",
-      " [  166 29834]]\n",
-      "\n",
-      "Relatório de Classificação:\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        Ruim       0.99      0.98      0.99     30000\n",
-      "         Bom       0.98      0.99      0.99     30000\n",
-      "\n",
-      "    accuracy                           0.99     60000\n",
-      "   macro avg       0.99      0.99      0.99     60000\n",
-      "weighted avg       0.99      0.99      0.99     60000\n",
-      "\n",
-      "Modelo salvo em ../models/mlp.pth\n",
-      "Modelo salvo em ../models/scaler.pkl\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "import joblib\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5100369",
+   "metadata": {},
+   "source": [
+    "### Inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c176f0ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges_dataset_df = pd.read_csv(\"../datasets/edges_dataset.csv\")\n",
     "\n",
-    "# ====== Carregar dataset ======\n",
-    "df = pd.read_csv(\"../datasets/edges.csv\")\n",
-    "\n",
-    "X = df[[\"rssi\", \"etx\", \"delay\", \"busy_fraction\"]].values\n",
-    "y = df[\"label\"].values\n",
-    "\n",
+    "X = edges_dataset_df[[\"rssi\", \"etx\", \"delay\", \"busy_fraction\"]].values\n",
+    "y = edges_dataset_df[\"label\"].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d05ed389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Normalização\n",
     "scaler = StandardScaler()\n",
     "X = scaler.fit_transform(X)\n",
@@ -100,13 +67,29 @@
     "    stratify=y\n",
     ")\n",
     "\n",
+    "# Divisão de Treino e Teste\n",
     "X_train = torch.tensor(X_train, dtype=torch.float)\n",
     "y_train = torch.tensor(y_train, dtype=torch.long)\n",
     "X_test = torch.tensor(X_test, dtype=torch.float)\n",
-    "y_test = torch.tensor(y_test, dtype=torch.long)\n",
-    "\n",
-    "# ====== Definir Modelo MLP ======\n",
-    "class LinkMLP(nn.Module):\n",
+    "y_test = torch.tensor(y_test, dtype=torch.long)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5a94e63",
+   "metadata": {},
+   "source": [
+    "### Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "bcfcdbf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GNN(nn.Module):\n",
     "    def __init__(self, in_dim=4, hidden=16, out_dim=2):\n",
     "        super().__init__()\n",
     "        self.net = nn.Sequential(\n",
@@ -115,13 +98,61 @@
     "            nn.Linear(hidden, out_dim)\n",
     "        )\n",
     "    def forward(self, x):\n",
-    "        return self.net(x)\n",
-    "\n",
-    "model = LinkMLP()\n",
+    "        return self.net(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9ded070",
+   "metadata": {},
+   "source": [
+    "### Load Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "cf842205",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = GNN()\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a495dc53",
+   "metadata": {},
+   "source": [
+    "### Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "46ace084",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch    Loss       Train Acc    Test Acc  \n",
+      "------------------------------------------\n",
+      "0        0.6717     0.5000       0.5587    \n",
+      "10       0.3046     0.9778       0.9769    \n",
+      "20       0.1227     0.9773       0.9770    \n",
+      "30       0.0675     0.9808       0.9805    \n",
+      "40       0.0498     0.9839       0.9837    \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{'Epoch':<8} {'Loss':<10} {'Train Acc':<12} {'Test Acc':<10}\")\n",
+    "print(f\"{'-'*42}\")\n",
     "\n",
-    "# ====== Treinamento ======\n",
     "for epoch in range(50):\n",
     "    model.train()\n",
     "    optimizer.zero_grad()\n",
@@ -135,45 +166,47 @@
     "        acc_train = (pred_train == y_train).float().mean().item()\n",
     "        pred_test = model(X_test).argmax(dim=1)\n",
     "        acc_test = (pred_test == y_test).float().mean().item()\n",
-    "        print(f\"Epoch {epoch}, Loss {loss.item():.4f}, \"\n",
-    "              f\"Train Acc {acc_train:.4f}, Test Acc {acc_test:.4f}\")\n",
-    "\n",
-    "# ====== Avaliação final ======\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "\n",
-    "model.eval()\n",
-    "with torch.no_grad():\n",
-    "    logits = model(X_test)\n",
-    "    pred_test = logits.argmax(dim=1)\n",
-    "\n",
-    "# Acurácia\n",
-    "acc_test = (pred_test == y_test).float().mean().item()\n",
-    "print(f\"\\nAcurácia final no conjunto de teste: {acc_test:.4f}\")\n",
-    "\n",
-    "# Métricas adicionais\n",
-    "y_true = y_test.numpy()\n",
-    "y_pred = pred_test.numpy()\n",
-    "\n",
-    "print(\"\\nMatriz de Confusão:\")\n",
-    "print(confusion_matrix(y_true, y_pred))\n",
-    "\n",
-    "print(\"\\nRelatório de Classificação:\")\n",
-    "print(classification_report(y_true, y_pred, target_names=[\"Ruim\", \"Bom\"]))\n",
-    "\n",
+    "        \n",
+    "        print(f\"{epoch:<8} {loss.item():<10.4f} {acc_train:<12.4f} {acc_test:<10.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b54b3ee0",
+   "metadata": {},
+   "source": [
+    "### Save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "4e81bb09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelo salvo em ../models/gnn_model.pth\n",
+      "Modelo salvo em ../models/scaler_model.pkl\n"
+     ]
+    }
+   ],
+   "source": [
     "# ====== Salvar modelo ======\n",
     "os.makedirs(\"../models\", exist_ok=True)\n",
-    "torch.save(model.state_dict(), \"../models/mlp.pth\")\n",
-    "joblib.dump(scaler, \"../models/scaler.pkl\")\n",
+    "torch.save(model.state_dict(), \"../models/gnn_model.pth\")\n",
+    "joblib.dump(scaler, \"../models/scaler_model.pkl\")\n",
     "\n",
-    "print(\"Modelo salvo em ../models/mlp.pth\")\n",
-    "print(\"Modelo salvo em ../models/scaler.pkl\")\n",
-    "print(\"\\n\")"
+    "print(\"Modelo salvo em ../models/gnn_model.pth\")\n",
+    "print(\"Modelo salvo em ../models/scaler_model.pkl\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.9.6)",
+   "display_name": "venv (3.12.4)",
    "language": "python",
    "name": "python3"
   },
@@ -187,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
