--- a/src/4.fusion.ipynb
+++ b/src/4.fusion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "id": "57301dc5",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "id": "46ca6451",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "id": "d34210ad",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "id": "231f6b80",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "id": "fa1e20b6",
    "metadata": {},
    "outputs": [],
@@ -99,17 +99,22 @@
     "weight_mfsr_edge = 0.20\n",
     "weight_idg_global = 0.10\n",
     "\n",
-    "conf = (weight_inference_model*inference_output_confidence + weight_apmr_edge*radnet_input_apmr_edge + weight_mfsr_edge*radnet_input_mfsr_edge + weight_idg_global*radnet_input_idg_global)"
+    "conf = (\n",
+    "    weight_inference_model*inference_output_confidence + \n",
+    "    weight_apmr_edge*radnet_input_apmr_edge + \n",
+    "    weight_mfsr_edge*radnet_input_mfsr_edge + \n",
+    "    weight_idg_global*radnet_input_idg_global\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "id": "8d3d10da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tau = 0.8\n",
+    "tau = 0.5\n",
     "cls = (conf >= tau).astype(int)\n",
     "\n",
     "CLASS_NAMES = {0: \"Ruim\", 1: \"Bom\"}"
@@ -117,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "id": "5d44c671",
    "metadata": {},
    "outputs": [
@@ -128,7 +133,7 @@
       "RSSI   ETX   Delay  Busy   Classe   Status   Confiança \n",
       "-------------------------------------------------------\n",
       "-55    2.0   17     0.30   1        Bom      0.86      \n",
-      "-85    3.8   30     0.10   0        Ruim     0.67      \n",
+      "-85    3.8   30     0.10   1        Bom      0.67      \n",
       "-35    1.2   5      0.05   1        Bom      0.87      \n",
       "-88    9.5   95     0.90   1        Bom      0.88      \n",
       "-40    8.2   85     0.80   1        Bom      0.88      \n",
@@ -141,7 +146,7 @@
       "-75    5.2   65     0.60   1        Bom      0.89      \n",
       "-78    4.8   70     0.65   1        Bom      0.88      \n",
       "-72    5.5   60     0.58   1        Bom      0.88      \n",
-      "-45    4.5   15     0.70   0        Ruim     0.75      \n",
+      "-45    4.5   15     0.70   1        Bom      0.75      \n",
       "-70    1.9   45     0.20   1        Bom      0.82      \n",
       "-60    2.9   30     0.30   1        Bom      0.85      \n",
       "-65    2.2   18     0.25   1        Bom      0.85      \n",
@@ -152,24 +157,24 @@
       "-86    8.5   88     0.85   1        Bom      0.82      \n",
       "-42    1.6   12     0.12   1        Bom      0.81      \n",
       "-33    7.2   75     0.80   1        Bom      0.80      \n",
-      "-82    1.2   8      0.10   0        Ruim     0.79      \n",
-      "-75    8.1   5      0.85   0        Ruim     0.79      \n",
-      "-68    6.5   85     0.05   0        Ruim     0.77      \n",
-      "-89    2.1   18     0.15   0        Ruim     0.63      \n",
-      "-45    9.2   22     0.20   0        Ruim     0.56      \n",
-      "-52    2.3   95     0.25   0        Ruim     0.52      \n",
-      "-48    2.0   20     0.88   0        Ruim     0.53      \n",
-      "-59    3.0   29     0.29   0        Ruim     0.75      \n",
-      "-61    2.9   31     0.31   0        Ruim     0.74      \n",
-      "-60    3.0   30     0.30   0        Ruim     0.73      \n",
-      "-60    3.0   30     0.29   0        Ruim     0.75      \n",
-      "-67    4.2   45     0.50   0        Ruim     0.74      \n",
-      "-64    3.8   42     0.48   0        Ruim     0.71      \n",
-      "-69    4.5   48     0.52   0        Ruim     0.76      \n",
-      "-66    4.0   40     0.45   0        Ruim     0.71      \n",
-      "-54    1.9   16     0.28   0        Ruim     0.78      \n",
-      "-56    2.2   19     0.26   0        Ruim     0.79      \n",
-      "-51    1.7   21     0.24   0        Ruim     0.80      \n",
+      "-82    1.2   8      0.10   1        Bom      0.79      \n",
+      "-75    8.1   5      0.85   1        Bom      0.79      \n",
+      "-68    6.5   85     0.05   1        Bom      0.77      \n",
+      "-89    2.1   18     0.15   1        Bom      0.63      \n",
+      "-45    9.2   22     0.20   1        Bom      0.56      \n",
+      "-52    2.3   95     0.25   1        Bom      0.52      \n",
+      "-48    2.0   20     0.88   1        Bom      0.53      \n",
+      "-59    3.0   29     0.29   1        Bom      0.75      \n",
+      "-61    2.9   31     0.31   1        Bom      0.74      \n",
+      "-60    3.0   30     0.30   1        Bom      0.73      \n",
+      "-60    3.0   30     0.29   1        Bom      0.75      \n",
+      "-67    4.2   45     0.50   1        Bom      0.74      \n",
+      "-64    3.8   42     0.48   1        Bom      0.71      \n",
+      "-69    4.5   48     0.52   1        Bom      0.76      \n",
+      "-66    4.0   40     0.45   1        Bom      0.71      \n",
+      "-54    1.9   16     0.28   1        Bom      0.78      \n",
+      "-56    2.2   19     0.26   1        Bom      0.79      \n",
+      "-51    1.7   21     0.24   1        Bom      0.80      \n",
       "-49    2.4   18     0.27   1        Bom      0.80      \n",
       "-53    2.0   23     0.29   1        Bom      0.81      \n",
       "-76    5.8   67     0.63   1        Bom      0.82      \n",
@@ -177,11 +182,11 @@
       "-77    6.2   72     0.68   1        Bom      0.84      \n",
       "-73    5.5   58     0.56   1        Bom      0.84      \n",
       "-79    5.9   75     0.71   1        Bom      0.85      \n",
-      "-55    1.8   35     0.60   0        Ruim     0.72      \n",
-      "-45    4.2   25     0.70   0        Ruim     0.65      \n",
-      "-65    2.5   18     0.55   0        Ruim     0.70      \n",
+      "-55    1.8   35     0.60   1        Bom      0.72      \n",
+      "-45    4.2   25     0.70   1        Bom      0.65      \n",
+      "-65    2.5   18     0.55   1        Bom      0.70      \n",
       "-58    3.8   28     0.80   1        Bom      0.85      \n",
-      "-41    5.0   50     0.50   0        Ruim     0.67      \n",
+      "-41    5.0   50     0.50   1        Bom      0.67      \n",
       "-80    2.0   20     0.20   1        Bom      0.83      \n",
       "-60    6.0   60     0.60   1        Bom      0.88      \n",
       "-50    2.5   25     0.25   1        Bom      0.89      \n",
@@ -195,8 +200,8 @@
       "-89    9.0   90     0.90   1        Bom      0.87      \n",
       "-44    7.5   12     0.15   1        Bom      0.83      \n",
       "-83    1.8   78     0.75   1        Bom      0.86      \n",
-      "-38    6.8   8      0.82   0        Ruim     0.64      \n",
-      "-71    1.4   55     0.18   0        Ruim     0.79      \n"
+      "-38    6.8   8      0.82   1        Bom      0.64      \n",
+      "-71    1.4   55     0.18   1        Bom      0.79      \n"
      ]
     }
    ],
@@ -219,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "id": "f9257d18",
    "metadata": {},
    "outputs": [
