--- a/src/2.inputs.ipynb
+++ b/src/2.inputs.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f354b092",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6cad41f7",
@@ -13,13 +21,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "457c78d3",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fb855109",
    "metadata": {},
    "outputs": [],
    "source": [
     "num_samples = 70 # quantidade de exemplos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1abeb474",
+   "metadata": {},
+   "source": [
+    "### Inputs"
    ]
   },
   {
@@ -156,6 +180,14 @@
     "    idg_global = round(idg_global, 2)\n",
     "    \n",
     "    radnet_inputs.append([apmr_edge, mfsr_edge, idg_global])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad163854",
+   "metadata": {},
+   "source": [
+    "### Save"
    ]
   },
   {
