--- a/src/3.train.ipynb
+++ b/src/3.train.ipynb
@@ -141,11 +141,11 @@
      "text": [
       "Epoch    Loss       Train Acc    Test Acc  \n",
       "------------------------------------------\n",
-      "0        0.7140     0.5000       0.5000    \n",
-      "10       0.3145     0.9745       0.9747    \n",
-      "20       0.1091     0.9766       0.9779    \n",
-      "30       0.0578     0.9815       0.9826    \n",
-      "40       0.0433     0.9851       0.9855    \n"
+      "0        0.6764     0.5871       0.7139    \n",
+      "10       0.2470     0.9809       0.9821    \n",
+      "20       0.0828     0.9852       0.9858    \n",
+      "30       0.0470     0.9867       0.9872    \n",
+      "40       0.0378     0.9875       0.9882    \n"
      ]
     }
    ],
@@ -169,6 +169,22 @@
     "        \n",
     "        print(f\"{epoch:<8} {loss.item():<10.4f} {acc_train:<12.4f} {acc_test:<10.4f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39832c24",
+   "metadata": {},
+   "source": [
+    "## Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf842112",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
