--- a/src/4.inference.ipynb
+++ b/src/4.inference.ipynb
@@ -128,76 +128,76 @@
      "text": [
       "RSSI   ETX   Delay  Busy   Classe   Status   Confiança \n",
       "-------------------------------------------------------\n",
-      "-65    3.5   63     0.67   0        Ruim     1.00      \n",
-      "-34    2.8   30     0.38   1        Bom      0.99      \n",
-      "-62    7.2   37     0.81   0        Ruim     1.00      \n",
-      "-52    1.8   9      0.15   1        Bom      1.00      \n",
-      "-31    2.1   33     0.11   1        Bom      1.00      \n",
-      "-61    3.5   21     0.01   1        Bom      1.00      \n",
-      "-45    3.3   19     0.20   1        Bom      1.00      \n",
-      "-64    7.7   71     0.54   0        Ruim     1.00      \n",
-      "-53    3.3   40     0.32   1        Bom      0.93      \n",
-      "-39    2.0   10     0.04   1        Bom      1.00      \n",
-      "-63    2.7   3      0.39   1        Bom      0.98      \n",
-      "-87    3.5   50     0.54   0        Ruim     1.00      \n",
-      "-56    7.2   37     0.37   0        Ruim     0.93      \n",
-      "-89    8.3   83     0.59   0        Ruim     1.00      \n",
-      "-55    4.5   91     0.47   0        Ruim     1.00      \n",
-      "-32    2.9   21     0.15   1        Bom      1.00      \n",
-      "-42    2.8   30     0.14   1        Bom      1.00      \n",
-      "-40    1.7   10     0.10   1        Bom      1.00      \n",
-      "-32    3.9   9      0.18   1        Bom      1.00      \n",
-      "-90    4.7   95     0.73   0        Ruim     1.00      \n",
-      "-68    4.3   69     0.86   0        Ruim     1.00      \n",
-      "-61    4.6   28     0.27   1        Bom      0.90      \n",
-      "-37    1.2   27     0.26   1        Bom      1.00      \n",
-      "-53    3.4   44     0.99   0        Ruim     0.99      \n",
-      "-43    3.5   30     0.17   1        Bom      1.00      \n",
-      "-63    5.5   49     0.83   0        Ruim     1.00      \n",
-      "-32    4.0   36     0.00   1        Bom      1.00      \n",
-      "-76    4.5   21     0.37   0        Ruim     0.72      \n",
-      "-52    2.1   29     0.14   1        Bom      1.00      \n",
-      "-59    2.2   35     0.38   1        Bom      0.90      \n",
-      "-68    5.6   89     0.80   0        Ruim     1.00      \n",
-      "-86    4.6   29     0.41   0        Ruim     0.97      \n",
-      "-68    4.0   37     0.37   0        Ruim     0.71      \n",
-      "-50    1.8   8      0.19   1        Bom      1.00      \n",
-      "-47    3.7   32     0.09   1        Bom      1.00      \n",
-      "-55    2.7   38     0.02   1        Bom      1.00      \n",
-      "-87    6.3   99     0.94   0        Ruim     1.00      \n",
-      "-54    1.8   3      0.00   1        Bom      1.00      \n",
-      "-45    1.6   6      0.11   1        Bom      1.00      \n",
-      "-52    3.6   8      0.11   1        Bom      1.00      \n",
-      "-79    7.9   84     0.44   0        Ruim     1.00      \n",
-      "-33    2.5   35     0.22   1        Bom      1.00      \n",
-      "-48    1.9   38     0.34   1        Bom      0.98      \n",
-      "-59    3.5   23     0.28   1        Bom      0.97      \n",
-      "-48    2.2   16     0.11   1        Bom      1.00      \n",
-      "-36    3.5   6      0.35   1        Bom      1.00      \n",
-      "-76    3.2   63     0.49   0        Ruim     0.99      \n",
-      "-65    3.6   37     0.75   0        Ruim     0.98      \n",
-      "-31    1.8   2      0.05   1        Bom      1.00      \n",
-      "-48    1.1   19     0.02   1        Bom      1.00      \n",
-      "-46    3.2   16     0.19   1        Bom      1.00      \n",
-      "-50    2.4   10     0.32   1        Bom      0.99      \n",
-      "-58    10.0  60     0.59   0        Ruim     1.00      \n",
-      "-65    1.6   1      0.33   1        Bom      0.99      \n",
-      "-66    7.8   89     0.73   0        Ruim     1.00      \n",
-      "-60    7.9   93     0.71   0        Ruim     1.00      \n",
-      "-69    8.5   58     0.83   0        Ruim     1.00      \n",
-      "-74    5.4   56     0.80   0        Ruim     1.00      \n",
-      "-65    9.8   75     0.93   0        Ruim     1.00      \n",
-      "-79    6.1   98     0.37   0        Ruim     1.00      \n",
-      "-82    6.0   48     0.28   0        Ruim     0.99      \n",
-      "-79    9.6   85     0.85   0        Ruim     1.00      \n",
-      "-81    7.4   56     0.76   0        Ruim     1.00      \n",
-      "-79    4.7   45     0.86   0        Ruim     1.00      \n",
-      "-59    3.0   63     0.73   0        Ruim     0.99      \n",
-      "-61    8.4   88     0.26   0        Ruim     1.00      \n",
-      "-61    7.8   34     0.52   0        Ruim     0.99      \n",
-      "-86    9.1   32     0.66   0        Ruim     1.00      \n",
-      "-58    5.0   47     0.56   0        Ruim     0.97      \n",
-      "-73    5.3   29     0.89   0        Ruim     1.00      \n"
+      "-87    3.8   38     0.58   0        Ruim     1.00      \n",
+      "-79    6.7   30     0.63   0        Ruim     1.00      \n",
+      "-60    3.1   37     0.39   1        Bom      0.77      \n",
+      "-54    1.2   38     0.26   1        Bom      0.99      \n",
+      "-47    2.7   26     0.16   1        Bom      1.00      \n",
+      "-88    6.8   68     0.97   0        Ruim     1.00      \n",
+      "-61    2.9   25     0.01   1        Bom      1.00      \n",
+      "-41    3.9   16     0.09   1        Bom      1.00      \n",
+      "-62    1.3   25     0.27   1        Bom      1.00      \n",
+      "-54    2.2   2      0.09   1        Bom      1.00      \n",
+      "-83    7.1   53     0.71   0        Ruim     1.00      \n",
+      "-42    3.6   18     0.22   1        Bom      1.00      \n",
+      "-85    5.1   81     0.96   0        Ruim     1.00      \n",
+      "-67    8.3   62     0.45   0        Ruim     1.00      \n",
+      "-60    3.6   33     0.79   0        Ruim     0.98      \n",
+      "-53    1.3   2      0.39   1        Bom      1.00      \n",
+      "-67    6.9   92     0.75   0        Ruim     1.00      \n",
+      "-60    2.3   33     0.08   1        Bom      1.00      \n",
+      "-37    1.4   22     0.22   1        Bom      1.00      \n",
+      "-52    1.8   37     0.31   1        Bom      0.99      \n",
+      "-65    4.5   75     0.61   0        Ruim     1.00      \n",
+      "-59    2.8   32     0.40   1        Bom      0.91      \n",
+      "-72    8.9   33     0.81   0        Ruim     1.00      \n",
+      "-59    5.8   78     0.80   0        Ruim     1.00      \n",
+      "-55    2.3   11     0.33   1        Bom      1.00      \n",
+      "-55    1.9   26     0.17   1        Bom      1.00      \n",
+      "-59    8.0   80     0.36   0        Ruim     1.00      \n",
+      "-62    3.5   25     0.32   1        Bom      0.94      \n",
+      "-51    6.4   36     0.73   0        Ruim     0.99      \n",
+      "-39    1.5   18     0.02   1        Bom      1.00      \n",
+      "-54    3.8   16     0.06   1        Bom      1.00      \n",
+      "-72    4.1   23     0.30   1        Bom      0.70      \n",
+      "-62    4.5   80     0.60   0        Ruim     1.00      \n",
+      "-46    3.2   92     0.69   0        Ruim     0.99      \n",
+      "-85    4.2   91     0.62   0        Ruim     1.00      \n",
+      "-84    3.4   46     1.00   0        Ruim     1.00      \n",
+      "-64    8.1   94     0.40   0        Ruim     1.00      \n",
+      "-71    3.6   89     0.97   0        Ruim     1.00      \n",
+      "-84    7.4   31     0.39   0        Ruim     1.00      \n",
+      "-61    2.4   38     0.34   1        Bom      0.91      \n",
+      "-69    7.3   27     0.61   0        Ruim     1.00      \n",
+      "-57    9.8   82     0.80   0        Ruim     1.00      \n",
+      "-61    9.0   68     0.39   0        Ruim     1.00      \n",
+      "-60    2.9   5      0.17   1        Bom      1.00      \n",
+      "-59    2.1   14     0.38   1        Bom      0.99      \n",
+      "-43    2.3   12     0.30   1        Bom      1.00      \n",
+      "-68    4.9   81     0.66   0        Ruim     1.00      \n",
+      "-80    7.6   52     0.64   0        Ruim     1.00      \n",
+      "-73    6.4   97     0.97   0        Ruim     1.00      \n",
+      "-87    5.7   55     0.26   0        Ruim     1.00      \n",
+      "-52    3.0   6      0.03   1        Bom      1.00      \n",
+      "-59    2.0   5      0.04   1        Bom      1.00      \n",
+      "-81    4.5   84     0.44   0        Ruim     1.00      \n",
+      "-37    3.6   10     0.31   1        Bom      1.00      \n",
+      "-80    5.2   40     0.41   0        Ruim     0.99      \n",
+      "-62    7.0   45     0.35   0        Ruim     0.98      \n",
+      "-75    6.5   37     0.32   0        Ruim     0.99      \n",
+      "-64    1.7   14     0.12   1        Bom      1.00      \n",
+      "-65    7.8   40     0.55   0        Ruim     1.00      \n",
+      "-56    3.3   28     0.19   1        Bom      0.99      \n",
+      "-34    1.9   26     0.13   1        Bom      1.00      \n",
+      "-78    4.4   1      0.38   1        Bom      0.79      \n",
+      "-36    2.7   30     0.33   1        Bom      0.99      \n",
+      "-77    3.9   12     0.44   0        Ruim     0.53      \n",
+      "-77    4.7   88     0.35   0        Ruim     1.00      \n",
+      "-34    2.8   13     0.08   1        Bom      1.00      \n",
+      "-35    1.2   25     0.12   1        Bom      1.00      \n",
+      "-51    2.0   17     0.19   1        Bom      1.00      \n",
+      "-30    2.0   37     0.29   1        Bom      1.00      \n",
+      "-59    3.6   34     0.02   1        Bom      0.99      \n"
      ]
     }
    ],
